@@ -1,3 +1,9 @@
+2015-05-28  Peter Stephenson  <p.stephenson@samsung.com>
+
+	* 35318: Doc/Zsh/builtins.yo, Doc/Zsh/options.yo, Src/builtin.c,
+	Src/exec.c: POSIX_BUILTINS compatibility for OPTIND processing
+	in getopts.
+
 2015-05-27  Peter Stephenson  <p.w.stephenson@ntlworld.com>
 
 	* 35306: Src/parse.c, Test/C02cond.ztst: "test -z \("
